# rust-chat-web-socket

./: Cargo.toml  chat.html
config/: default.toml  docker.toml
src/: app_config.rs  main.rs
