[package]
name = "web_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6.0-rc.1", features = ["ws"] }
futures = "0.3"
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
message = { git = "https://github.com/rdeanmcdonald/rust-chat-message" }
config = "0.13.1"
redis = { version = "0.21", features = ["tokio-comp"] }
